# music-player

./: Dockerfile  build-whole.sh  install-deps.sh  music-player.code-workspace  render.yaml
music-player-wasm/: Cargo.toml  build.sh
music-player-wasm/src/: Note.rs  lib.rs  midi.rs  note.rs  piece.rs  utils.rs
music-player-web/: package.json  tsconfig.json
music-player-web/public/: index.html
music-player-web/src/: App.css  App.scss  App.tsx  index.tsx  player.ts  utils.ts
music-player-web/src/components/: Button.tsx  Footer.tsx  Intro.tsx  Selector.tsx  const.ts  index.ts
music-player-web/src/components/KeyBoard/: KeyBoard.tsx  NoteBlock.tsx  const.ts  index.ts
music-player-web/src/components/SongViewer/: NoteBlock.tsx  SongViewer.tsx  index.ts
music-player-web/src/context/: Audio.tsx  Song.tsx
music-player-web/src/hooks/: index.ts  useAudio.ts  useKeyboard.ts  useSong.ts  useWasm.ts
music-player-web/src/interface/: Note.ts  Piece.ts
