[package]
name = "music-player-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["console", "Window"] }
js-sys = "0.3.60"
midir = "0.8.0"
midly = { version = "0.5.2", default-features = false, features = ["std"] }
